Update header text and user info in index.html

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="container mx-auto p-4 md:p-8">
         <header class="text-center mb-8">
             <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Product Safety Signal Browser</h1>
-            <p class="text-gray-600 mt-2">Filter, add, edit, or delete records from your **local browser storage**.</p>
-            <div id="user-info" class="text-sm text-gray-500 mt-4">Running in LOCAL MODE. Data is stored in this browser only.</div>
+            <p class="text-gray-600 mt-2">Filter, add, edit, or delete records from below list</p>
+            <div id="user-info" class="text-sm text-gray-500 mt-4">Created by Banafa Consults</div>
         </header>
 
         <!-- Message Box for user feedback -->
